--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
+    "rollup": "^3.0.0",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
